change url slider

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
       <section class="flexslider">
         <ul class="slides">
-          <li style="background-image: url(img/slider_1.jpg)" class="overlay">
+          <li style="background-image: url(robocin.github.io/img/slider_1.jpg)" class="overlay">
             <div class="container">
               <div class="row">
                 <div class="col-md-8 col-md-offset-2">
@@ -119,7 +119,7 @@
               </div>
             </div>
           </li>
-          <li style="background-image: url(img/slider_2.jpg)" class="overlay">
+          <li style="background-image: url(robocin.github.io/img/slider_2.jpg)" class="overlay">
             <div class="container">
               <div class="row">
                 <div class="col-md-8 col-md-offset-2">
@@ -131,7 +131,7 @@
             </div>
 
           </li>
-          <li style="background-image: url(img/slider_3.jpg)" class="overlay">
+          <li style="background-image: url(robocin.github.io/img/slider_3.jpg)" class="overlay">
             <div class="container">
               <div class="row">
                 <div class="col-md-8 col-md-offset-2">
@@ -143,7 +143,7 @@
             </div>
 
           </li>
-          <li style="background-image: url(img/slider_4.jpg)" class="overlay">
+          <li style="background-image: url(robocin.github.io/img/slider_4.jpg)" class="overlay">
             <div class="container">
               <div class="row">
                 <div class="col-md-8 col-md-offset-2">
