--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
       <section class="flexslider">
         <ul class="slides">
-          <li style="background-image: url(robocin.github.io/img/slider_1.jpg)" class="overlay">
+          <li style="background-image: url(img/slider_1.jpg)" class="overlay">
             <div class="container">
               <div class="row">
                 <div class="col-md-8 col-md-offset-2">
@@ -119,7 +119,7 @@
               </div>
             </div>
           </li>
-          <li style="background-image: url(robocin.github.io/img/slider_2.jpg)" class="overlay">
+          <li style="background-image: url(img/slider_2.jpg)" class="overlay">
             <div class="container">
               <div class="row">
                 <div class="col-md-8 col-md-offset-2">
@@ -131,7 +131,7 @@
             </div>
 
           </li>
-          <li style="background-image: url(robocin.github.io/img/slider_3.jpg)" class="overlay">
+          <li style="background-image: url(img/slider_3.jpg)" class="overlay">
             <div class="container">
               <div class="row">
                 <div class="col-md-8 col-md-offset-2">
@@ -143,7 +143,7 @@
             </div>
 
           </li>
-          <li style="background-image: url(robocin.github.io/img/slider_4.jpg)" class="overlay">
+          <li style="background-image: url(img/slider_4.jpg)" class="overlay">
             <div class="container">
               <div class="row">
                 <div class="col-md-8 col-md-offset-2">
@@ -178,7 +178,7 @@
                   <p>RobôCIn is a research group of the Computer Center, which seeks solutions and intelligent solutions in the area of robotics. The group was created in 2015 and has 12 members and is coordinated by Professor Edna Barros and Professor Hansenclever Bassani.</p>
                   <p><a href="#" class="btn btn-primary">Learn More</a></p>
                 </div>
-                <div class="probootstrap-image probootstrap-animate" style="background-image: url(img/slider_3.jpg)">
+                <div class="probootstrap-image probootstrap-animate" style="background-image: url(img/video.jpg)">
                   <a href="https://www.youtube.com/watch?v=_c9QNyWlv7k" class="btn-video popup-vimeo"><i class="icon-play3"></i></a>
                 </div>
               </div>
