--- a/index.html
+++ b/index.html
@@ -714,9 +714,9 @@
               <div class="probootstrap-footer-widget">
                 <h3>Contact Info</h3>
                 <ul class="probootstrap-contact-info">
-                  <li><i class="icon-location2"></i> <span>198 West 21th Street, Suite 721 New York NY 10016</span></li>
-                  <li><i class="icon-mail"></i><span>info@domain.com</span></li>
-                  <li><i class="icon-phone2"></i><span>+123 456 7890</span></li>
+                  <li><i class="icon-location2"></i> <span>Av. Jorn. Aníbal Fernandes, s/n-Cidade Universitária, Recife-PE</span></li>
+                  <li><i class="icon-mail"></i><span>robocin@cin.ufpe.br</span></li>
+                  <li><i class="icon-phone2"></i><span>+55 81 2126-8430</span></li>
                 </ul>
               </div>
             </div>
@@ -730,7 +730,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-8 text-left">
-                <p>&copy; 2017 <a href="https://probootstrap.com/">ProBootstrap:Enlight</a>. All Rights Reserved. Designed &amp; Developed with <i class="icon icon-heart"></i> by <a href="https://probootstrap.com/">ProBootstrap.com</a></p>
+                <p>&copy; 2017 <a href="cin.ufpe.br/~robocin">RobôCIn </a>. All Rights Reserved. Designed &amp; Developed with <i class="icon icon-heart"></i> by <a href="https://probootstrap.com/">ProBootstrap.com</a></p>
               </div>
               <div class="col-md-4 probootstrap-back-to-top">
                 <p><a href="#" class="js-backtotop">Back to top <i class="icon-arrow-long-up"></i></a></p>
