--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
             </div>
             <div class="col-lg-3 col-md-3 col-sm-3 probootstrap-top-social">
               <ul>
-                <li><a href="#"><i class="icon-twitter"></i></a></li>
-                <li><a href="#"><i class="icon-facebook2"></i></a></li>
-                <li><a href="www.instagram.com/robocinufpe"><i class="icon-instagram2"></i></a></li>
-                <li><a href="#"><i class="icon-youtube"></i></a></li>
+                <!--<li><a href="#"><i class="icon-twitter"></i></a></li>-->
+                <li><a href="https://www.facebook.com/robocin/"><i class="icon-facebook2"></i></a></li>
+                <li><a href="https://www.instagram.com/robocinufpe/"><i class="icon-instagram2"></i></a></li>
+                <!--<li><a href="#"><i class="icon-youtube"></i></a></li>-->
                 <!--<li><a href="#" class="probootstrap-search-icon js-probootstrap-search"><i class="icon-search"></i></a></li>-->
               </ul>
             </div>
@@ -101,6 +101,7 @@
                 </ul>
               </li>
               <li><a href="contact.html">Contact</a></li>
+              <li><a href="https://sites.google.com/a/cin.ufpe.br/wiki-robocin/home">Intranet</a></li>
             </ul>
           </div>
         </div>
