modified links and contact us

--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,7 @@
                 <div class="col-md-7 col-md-push-1  probootstrap-animate" id="probootstrap-content">
                   <h2>Get In Touch</h2>
                   <p>Contact us using the form below.</p>
-                  <form action="mailto:robocin@cin.ufpe.br" method="post" class="probootstrap-form">
+                  <form action="mailto:[b]robocin@cin.ufpe.br[\b]" method="post" class="probootstrap-form">
                     <div class="form-group">
                       <label for="name">Full Name</label>
                       <input type="text" class="form-control" id="name" name="name">
