modified contact us

--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,7 @@
                 <div class="col-md-7 col-md-push-1  probootstrap-animate" id="probootstrap-content">
                   <h2>Get In Touch</h2>
                   <p>Contact us using the form below.</p>
-                  <form action="https://formspree.io/jnds@cin.ufpe.br" method="post" class="probootstrap-form">
+                  <form action="https://formspree.io/robocin@cin.ufpe.br" method="post" class="probootstrap-form">
                     <div class="form-group">
                       <label for="name">Full Name</label>
                       <input type="text" class="form-control" id="name" name="name">
@@ -170,16 +170,7 @@
         </div>
       </section>
 
-      <section class="probootstrap-cta">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12">
-              <h2 class="probootstrap-animate" data-animate-effect="fadeInRight">Get your admission now!</h2>
-              <a href="#" role="button" class="btn btn-primary btn-lg btn-ghost probootstrap-animate" data-animate-effect="fadeInLeft">Enroll</a>
-            </div>
-          </div>
-        </div>
-      </section>
+      
       <footer class="probootstrap-footer probootstrap-bg">
         <div class="container">
           <div class="row">
