--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
                 <!--<li><a href="#"><i class="icon-twitter"></i></a></li>-->
                 <li><a href="https://www.facebook.com/robocin/"><i class="icon-facebook2"></i></a></li>
                 <li><a href="https://www.instagram.com/robocinufpe/"><i class="icon-instagram2"></i></a></li>
-                <!--<li><a href="#"><i class="icon-youtube"></i></a></li>-->
+                <li><a href="#"><i class="icon-github"></i></a></li>
                 <!--<li><a href="#" class="probootstrap-search-icon js-probootstrap-search"><i class="icon-search"></i></a></li>-->
               </ul>
             </div>
@@ -170,22 +170,19 @@
         </div>
       </section>
 
-      
+
       <footer class="probootstrap-footer probootstrap-bg">
         <div class="container">
           <div class="row">
             <div class="col-md-4">
               <div class="probootstrap-footer-widget">
-                <h3>About The School</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro provident suscipit natus a cupiditate ab minus illum quaerat maxime inventore Ea consequatur consectetur hic provident dolor ab aliquam eveniet alias</p>
+                <h3>About RobôCIn</h3>
+                <p>RobôCIn is a research group of the Computer Center, which seeks solutions and intelligent solutions in the area of robotics.</p>
                 <h3>Social</h3>
                 <ul class="probootstrap-footer-social">
-                  <li><a href="#"><i class="icon-twitter"></i></a></li>
-                  <li><a href="#"><i class="icon-facebook"></i></a></li>
+                  <li><a href="https://www.facebook.com/robocin/"><i class="icon-facebook"></i></a></li>
+                  <li><a href="https://www.instagram.com/robocinufpe/"><i class="icon-instagram2"></i></a></li>
                   <li><a href="#"><i class="icon-github"></i></a></li>
-                  <li><a href="#"><i class="icon-dribbble"></i></a></li>
-                  <li><a href="#"><i class="icon-linkedin"></i></a></li>
-                  <li><a href="#"><i class="icon-youtube"></i></a></li>
                 </ul>
               </div>
             </div>
