--- a/index.html
+++ b/index.html
@@ -253,20 +253,22 @@
         </div>
       </section>
 
-      <section class="probootstrap-section probootstrap-section-colored probootstrap-bg probootstrap-custom-heading probootstrap-tab-section" style="background-image: url(img/slider_2.jpg)">
+      <section class="probootstrap-section probootstrap-section-colored probootstrap-bg probootstrap-custom-heading probootstrap-tab-section" style="background-image: url(img/img_robo.jpg)">
         <div class="container">
           <div class="row">
             <div class="col-md-12 text-center section-heading probootstrap-animate">
-              <h2 class="mb0">Highlights</h2>
+              <h2 class="mb0">Upcoming Events</h2>
             </div>
           </div>
         </div>
+        <!--
         <div class="probootstrap-tab-style-1">
           <ul class="nav nav-tabs probootstrap-center probootstrap-tabs no-border">
             <li class="active"><a data-toggle="tab" href="#featured-news">Featured News</a></li>
             <li><a data-toggle="tab" href="#upcoming-events">Upcoming Events</a></li>
           </ul>
         </div>
+      -->
       </section>
 
       <section class="probootstrap-section probootstrap-section">
@@ -275,47 +277,21 @@
             <div class="col-md-12">
 
               <div class="tab-content">
-
                 <div id="featured-news" class="tab-pane fade in active">
                   <div class="row">
                     <div class="col-md-12">
                       <div class="owl-carousel" id="owl1">
                         <div class="item">
                           <a href="#" class="probootstrap-featured-news-box">
-                            <figure class="probootstrap-media"><img src="img/img_sm_3.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive"></figure>
+                            <figure class="probootstrap-media"><img src="img/img_new1.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive"></figure>
                             <div class="probootstrap-text">
-                              <h3>Tempora consectetur unde nisi</h3>
-                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, ut.</p>
-                              <span class="probootstrap-date"><i class="icon-calendar"></i>July 9, 2017</span>
-
+                              <h3>LARC 2018</h3>
+                              <span class="probootstrap-date"><i class="icon-calendar"></i>October 9, 2017</span>
+                              <span class="probootstrap-location"><i class="icon-location2"></i>João Pessoa,PB,Brazil</span>
                             </div>
                           </a>
                         </div>
-                        <!-- END item -->
-                        <div class="item">
-                          <a href="#" class="probootstrap-featured-news-box">
-                            <figure class="probootstrap-media"><img src="img/img_sm_1.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive"></figure>
-                            <div class="probootstrap-text">
-                              <h3>Tempora consectetur unde nisi</h3>
-                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, officia.</p>
-                              <span class="probootstrap-date"><i class="icon-calendar"></i>July 9, 2017</span>
-
-                            </div>
-                          </a>
-                        </div>
-                        <!-- END item -->
-                        <div class="item">
-                          <a href="#" class="probootstrap-featured-news-box">
-                            <figure class="probootstrap-media"><img src="img/img_sm_2.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive"></figure>
-                            <div class="probootstrap-text">
-                              <h3>Tempora consectetur unde nisi</h3>
-                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, dolores.</p>
-                              <span class="probootstrap-date"><i class="icon-calendar"></i>July 9, 2017</span>
-
-                            </div>
-                          </a>
-                        </div>
-                        <!-- END item -->
+                        <!--
                         <div class="item">
                           <a href="#" class="probootstrap-featured-news-box">
                             <figure class="probootstrap-media"><img src="img/img_sm_3.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive"></figure>
@@ -328,18 +304,14 @@
                             </div>
                           </a>
                         </div>
-                        <!-- END item -->
+                      -->
                       </div>
                     </div>
                   </div>
-                  <!-- END row -->
-                  <div class="row">
-                    <div class="col-md-12 text-center">
-                      <p><a href="#" class="btn btn-primary">View all news</a></p>
-                    </div>
-                  </div>
+
                 </div>
-                <div id="upcoming-events" class="tab-pane fade">
+                <!--
+                <div id="upcoming-events" class="tab-pane fade in active">
                   <div class="row">
                     <div class="col-md-12">
                       <div class="owl-carousel" id="owl2">
@@ -353,6 +325,7 @@
                             </div>
                           </a>
                         </div>
+                      -->
                         <!-- END item -->
                         <!--
                         <div class="item">
@@ -368,11 +341,6 @@
                         -->
                         <!-- END item -->
                       </div>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-md-12 text-center">
-                      <p><a href="#" class="btn btn-primary">View all events</a></p>
                     </div>
                   </div>
                 </div>
@@ -431,68 +399,6 @@
         </div>
       </section>
 
-      <section class="probootstrap-section">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6 col-md-offset-3 text-center section-heading probootstrap-animate">
-              <h2>Why Choose Enlight School</h2>
-              <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore natus quos quibusdam soluta at.</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6">
-              <div class="service left-icon probootstrap-animate">
-                <div class="icon"><i class="icon-checkmark"></i></div>
-                <div class="text">
-                  <h3>Consectetur Adipisicing</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore natus quos quibusdam soluta at.</p>
-                </div>
-              </div>
-              <div class="service left-icon probootstrap-animate">
-                <div class="icon"><i class="icon-checkmark"></i></div>
-                <div class="text">
-                  <h3>Aliquid Dolorum Saepe</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore natus quos quibusdam soluta at.</p>
-                </div>
-              </div>
-              <div class="service left-icon probootstrap-animate">
-                <div class="icon"><i class="icon-checkmark"></i></div>
-                <div class="text">
-                  <h3>Eveniet Tempora Anisi</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore natus quos quibusdam soluta at.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="service left-icon probootstrap-animate">
-                <div class="icon"><i class="icon-checkmark"></i></div>
-                <div class="text">
-                  <h3>Laboriosam Quod Dignissimos</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore natus quos quibusdam soluta at.</p>
-                </div>
-              </div>
-
-              <div class="service left-icon probootstrap-animate">
-                <div class="icon"><i class="icon-checkmark"></i></div>
-                <div class="text">
-                  <h3>Asperiores Maxime Modi</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore natus quos quibusdam soluta at.</p>
-                </div>
-              </div>
-
-              <div class="service left-icon probootstrap-animate">
-                <div class="icon"><i class="icon-checkmark"></i></div>
-                <div class="text">
-                  <h3>Libero Maxime Molestiae</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore natus quos quibusdam soluta at.</p>
-                </div>
-              </div>
-
-            </div>
-          </div>
-          <!-- END row -->
-        </div>
-      </section>
 
       <footer class="probootstrap-footer probootstrap-bg">
         <div class="container">
